@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-07-09T08:26:33Z",
-  "count_outdated" : 655,
-  "uniques_outdated" : 340,
-  "count" : 687,
-  "uniques" : 357,
+  "timestamp" : "2022-07-09T16:29:18Z",
+  "count_outdated" : 657,
+  "uniques_outdated" : 341,
+  "count" : 689,
+  "uniques" : 358,
   "clones" : [
-    {
-      "timestamp": "2022-06-25T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-06-26T00:00:00Z",
       "count": 4,
@@ -100,6 +93,13 @@
       "timestamp": "2022-07-08T00:00:00Z",
       "count": 3,
       "count_minmax": [ 1, 3 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-07-09T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
