@@ -3,11 +3,6 @@
   "uniques": 4,
   "clones": [
     {
-      "timestamp": "2022-06-25T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
-    {
       "timestamp": "2022-06-26T00:00:00Z",
       "count": 4,
       "uniques": 2
@@ -70,6 +65,11 @@
     {
       "timestamp": "2022-07-08T00:00:00Z",
       "count": 3,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2022-07-09T00:00:00Z",
+      "count": 1,
       "uniques": 1
     }
   ]
